# filevars

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml
src/: filevars.c
test/: filevars.json
